--- a/config/database.yml
+++ b/config/database.yml
@@ -5,25 +5,25 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
-  #adapter: sqlite3
+  # adapter: postgresql
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  # database: db/development.sqlite3
-  database: park_pups_db_dev
+  database: db/development.sqlite3
+  # database: park_pups_db_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  # database: db/test.sqlite3
-  database: park_pups_db_test
+  database: db/test.sqlite3
+  # database: park_pups_db_test
 
 production:
   <<: *default
-  # database: db/production.sqlite3
-  database: park_pups_db_prod
+  database: db/production.sqlite3
+  # database: park_pups_db_prod
