--- a/config/database.yml
+++ b/config/database.yml
@@ -5,25 +5,24 @@
 #   gem 'sqlite3'
 #
 default: &default
-  # adapter: postgresql
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
+  adapter: sqlite3
   database: db/development.sqlite3
-  # database: park_pups_db_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: sqlite3
   database: db/test.sqlite3
-  # database: park_pups_db_test
+
 
 production:
   <<: *default
-  database: db/production.sqlite3
-  # database: park_pups_db_prod
+  database: park_pups_db_prod
